--- a/.gitignore
+++ b/.gitignore
@@ -235,6 +235,7 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+build/
 
 # Typescript v1 declaration files
 typings/
